--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,16 @@
 .App-logo {
-  max-width: 200px;
+  max-width: 70px;
   display: block;
   margin: 0 auto;
 }
 
 .App-footer {
   margin: 30px 0;
+}
+
+body {
+  background-image: url(https://i.ibb.co/ypjJy5R/pexels-janko-ferlic-590493.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: "Yantramanav", sans-serif;
 }
