--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -6,7 +6,7 @@
   background: rgba(57, 57, 79, 0.8);
   padding: 25px;
   border-radius: 11px;
-  box-shadow: 0px 5px 15px rgba(0 0 0 / 10%);
+  box-shadow: inset 6px -4px 20px 20px rgb(0 0 0 / 10%);
   margin: 20px 0;
   color: whitesmoke;
 }
@@ -27,4 +27,10 @@
   margin-top: 5px;
   font-style: italic;
   margin-left: 4px;
+}
+
+.Dictionary h1 {
+  font-size: 24px;
+  line-height: 36px;
+  margin-bottom: 20px;
 }
