--- a/src/Phonetic.css
+++ b/src/Phonetic.css
@@ -3,18 +3,19 @@
 }
 
 .Phonetic a {
-  border: 1px solid #ddd;
+  border: 1px solid whitesmoke;
+  color: rgb(204, 150, 122);
   text-decoration: none;
   font-size: 13px;
-  font-weight: bold;
+  font-weight: 750;
   margin-right: 10px;
-  padding: 10px 15px;
+  padding: 12px 15px;
   border-radius: 20px;
   transition: all 150ms ease-in-out;
 }
 
 .Phonetic a:hover {
-  background-color: teal;
+  background-color: rgb(204, 150, 122);
   color: whitesmoke;
 }
 
