--- a/src/Synonyms.css
+++ b/src/Synonyms.css
@@ -1,6 +1,6 @@
 .Synonyms ul {
   padding: 0;
-  margin: 20px 0 0;
+  margin: 10px 0 0;
 }
 
 .Synonyms li {
@@ -8,4 +8,5 @@
   display: inline-block;
   padding-right: 20px;
   line-height: 1;
+  margin-bottom: 40px;
 }
